--- a/README
+++ b/README
@@ -1,1 +1,12 @@
-Start GitHub
+Script to install the latest NginX, MySQL and PHP (with APC and Suhosin).
+All the steps are described at http://vladgh.com/blog/install-nginx-and-php-php-fpm-mysql-and-apc
+
+HOW TO:
+
+- Make sure you have Git installed on your Ubuntu System:
+$ sudo apt-get install git
+
+- Clone this repository:
+$ git clone git://github.com/vladgh/VladGh.com---LEMP.git
+$ cd VladGh.com---LEMP
+$ sh install.sh
