--- a/README
+++ b/README
@@ -12,3 +12,6 @@ $ cd VladGh.com---LEMP
 
 - Run the installer
 $ sudo sh install.sh
+
+DISCLAIMER:
+All content provided here including the scripts is provided without any warranty. You use it at your own risk. I can not be held responsible for any damage that may occur because of it. By using the scripts I provide here you accept this terms.
