--- a/README
+++ b/README
@@ -1,12 +1,11 @@
-Script to install the latest NginX, MySQL and PHP (with APC and Suhosin):
+This package represents a script to install the latest NginX, MySQL and PHP (with APC and Suhosin):
   - NginX 0.9.4
   - PHP 5.3.5
   - APC 3.1.7
   - Suhosin Extension 0.9.32.1
-  - MySQL 5.1.49
 
 All the steps are described at http://vladgh.com/blog/install-nginx-and-php-php-fpm-mysql-and-apc
-It's highly recommended to run this installer on a freshly installed system.
+It's highly recommended to run this installer on a fresh installed system.
 This is tested with Ubuntu 10.04 and 10.10, both 32 bits and 64 bits, on official Amazon EC2 Ubuntu images.
 
 HOW TO:
