--- a/README
+++ b/README
@@ -28,5 +28,7 @@ Also, if you go to:
 - http://example.com/nginx_status for the NginX statistics;
 - http://example.com/status?html for the FPM statistics. 
 
+If you want to report an issue you can use the tracker available at https://github.com/vladgh/VladGh.com-LEMP/issues.
+
 DISCLAIMER:
 All content provided here including the scripts is provided without any warranty. You use it at your own risk. I can not be held responsible for any damage that may occur because of it. By using the scripts I provide here you accept this terms.
