--- a/README.mkd
+++ b/README.mkd
@@ -9,10 +9,10 @@ All the steps are described at http://vladgh.com/blog/install-nginx-and-php-php-
 It's highly recommended to run this installer on a fresh installed system.
 This is tested with Ubuntu 10.04 and 10.10, both 32 bits and 64 bits, on official Amazon EC2 Ubuntu images.
 
-HOW TO:
+# HOW TO:
 
-- Make sure you have Git installed on your Ubuntu System:
-$ sudo apt-get install git-core screen
+Make sure you have Git installed on your Ubuntu System:
+    sudo apt-get install git-core screen
 
 - Clone this repository, and get the latest stable version of this script:
 $ git clone git://github.com/vladgh/VladGh.com-LEMP.git
