--- a/README.mkd
+++ b/README.mkd
@@ -33,3 +33,12 @@ Also, if you go to:
 
 # DISCLAIMER: #
 ** All content provided here including the scripts is provided without any warranty. You use it at your own risk. I can not be held responsible for any damage that may occur because of it. By using the scripts I provide here you accept this terms. **
+
+## Release Notes: ##
+
+### 2.0 ###
+
+  * Cleared the screen of messages and redirected all output to install.log;
+  * Removed GEOIP default install;
+  * Created sites-available/enabled combo for Nginx;
+  * Added multiple checks.
