--- a/README.mkd
+++ b/README.mkd
@@ -20,7 +20,7 @@ Clone this repository, and get the latest stable version of this script:
     git checkout 2.0
 
 Run the installer; I recommend running everything inside a screen session because if your connection drops you can easily come back with `screen -rad`
-    sudo screen sh install.sh
+    sudo screen bash install.sh
 
 After the installer is finished (this will take a long time depending on your server specifications), you can go to your servers address and you will see the PHP info page.
 Also, if you go to:
