--- a/README.mkd
+++ b/README.mkd
@@ -19,11 +19,14 @@ Clone this repository, and get the latest stable version of this script:
 
     git clone git://github.com/vladgh/VladGh.com-LEMP.git
     cd VladGh.com-LEMP
-    git checkout 2.3
 
 Run the installer; I recommend running everything inside a screen session because if your connection drops you can easily come back with `screen -rad`
 
     sudo screen bash install.sh
+
+If you need an earlier version checkout the appropriate tag before running the install script:
+  
+    git checkout 2.3
 
 After the installer is finished (this will take a long time depending on your server specifications), you can go to your servers address and you will see the PHP info page.
 Also, if you go to:
@@ -42,7 +45,7 @@ Also, if you go to:
 ### 2.3 ###
 
   * Upgraded NginX to the latest 1.0.2 stable and APC to 3.1.8.
-  * Tested on Ubuntu 11.04
+  * Temporary fix for Ubuntu 11.04 libraries path.
   
 ### 2.2 ###
 
