--- a/README.mkd
+++ b/README.mkd
@@ -35,6 +35,8 @@ Also, if you go to:
   * **http://example.com/nginx_status** for the NginX statistics;
   * **http://example.com/status?html** for the FPM statistics. 
 
+You can also use the `nxensite` and `nxdissite` commands to enable or disable sites in NginX (similar to a2ensite and a2dissite in Apache).
+
 ### If you want to report an issue you can use the tracker available at [https://github.com/vladgh/VladGh.com-LEMP/issues](https://github.com/vladgh/VladGh.com-LEMP/issues). ###
 
 # DISCLAIMER: #
@@ -42,6 +44,12 @@ Also, if you go to:
 
 ## Release Notes: ##
 
+### 2.5 ###
+
+  * Added nxensite and nxdissite scripts (Thanks to [dambravicius](https://github.com/dambravicius)).
+  * Improved "Current Dir" declaration.
+  * Made all the paths global.
+	
 ### 2.4 ###
 
   * Upgraded NginX to the latest 1.0.3 stable and APC to 3.1.9.
