Made scripts executable.

--- a/README.mkd
+++ b/README.mkd
@@ -25,7 +25,7 @@ Clone this repository, and get the latest stable version of this script:
 
 Run the installer; I recommend running everything inside a screen session because if your connection drops you can easily come back with `screen -rad`
 
-    sudo screen bash install.sh
+    sudo screen ./install.sh
 
 If you need an earlier version checkout the appropriate tag before running the install script:
   
@@ -43,7 +43,7 @@ In the "ext" folder you will also find some utilities:
 
 * `nxensite` and `nxdissite` commands to enable or disable sites in NginX (similar to a2ensite and a2dissite in Apache).
 * `update_nginx.sh` script which can upgrade the current nginx.
-	* you can run it with `sudo env PATH=$PATH bash ext/update_nginx.sh 1.0.4` (as you can see there are a few things worth mentioning: you need to declare the current path to the sudo command in order to preserve it; you can only have one argument in a strict form x.x.x; )
+	* you can run it with `sudo env PATH=$PATH ext/update_nginx.sh 1.0.4` (as you can see there are a few things worth mentioning: you need to declare the current path to the sudo command in order to preserve it; you can only have one argument in a strict form x.x.x; )
 	* this script is doing nothing more than reconstructing you current nginx config with the new version. It gets the previous configure options programmatically so if you used 3rd party modules it will not work. Also it saves the current config files and brings them back after the compilation was successful.
 
 ###If you find this interesting and you want to keep the development active, please click on the button below to donate via PayPal:###
@@ -60,6 +60,7 @@ In the "ext" folder you will also find some utilities:
 
   * Added nginx upgrade script.
   * Improved kill command.
+  * made install.sh executable.
 	
 ### 3.0 ###
 
