--- a/README.mkd
+++ b/README.mkd
@@ -1,6 +1,6 @@
 This package represents a script to install the latest NginX, MySQL and PHP (with APC and Suhosin):
 
-  * NginX 1.1.8
+  * NginX 1.1.10
   * PHP 5.3.8
   * APC 3.1.9
   * Suhosin Extension 0.9.32.1
@@ -55,6 +55,10 @@ In the "ext" folder you will also find some utilities:
 ** All content provided here including the scripts is provided without any warranty. You use it at your own risk. I can not be held responsible for any damage that may occur because of it. By using the scripts I provide here you accept this terms. **
 
 ## Release Notes: ##
+
+### 3.13 ###
+
+  * Upgraded NginX to version 1.1.10.
 
 ### 3.12 ###
 
