--- a/README.mkd
+++ b/README.mkd
@@ -7,7 +7,7 @@ This package represents a script to install the latest NginX, MySQL and PHP (wit
 
 All the steps are described at http://vladgh.com/blog/install-nginx-and-php-php-fpm-mysql-and-apc
 It's highly recommended to run this installer on a fresh installed system.
-This is tested with Ubuntu 10.04, 10.10 and 11.04, both 32 bits and 64 bits, on official Amazon EC2 Ubuntu images.
+This is tested with Ubuntu 10.04 and 11.10, both 32 bits and 64 bits, on official Amazon EC2 Ubuntu images.
 
 ###If you find this interesting and you want to keep the development active, please click on the button below to donate via PayPal:###
 <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=EBHGZKAFGW8CG"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" alt="Donate via PayPal" /></a>
