--- a/README.mkd
+++ b/README.mkd
@@ -1,3 +1,5 @@
+# THIS BRANCH IS FOR TESTING PURPOSES ONLY #
+
 This package represents a script to install the latest NginX, MySQL and PHP (with APC and Suhosin):
 
   * NginX 1.1.14
