--- a/README.mkd
+++ b/README.mkd
@@ -16,7 +16,7 @@ This is tested with Ubuntu 10.04 and 11.10, both 32 bits and 64 bits, on officia
 
 Make sure you have Git installed on your Ubuntu System:
 
-    sudo apt-get install git-core screen
+    sudo apt-get install git screen
 
 Clone this repository, and get the latest stable version of this script:
 
