--- a/README.mkd
+++ b/README.mkd
@@ -1,6 +1,6 @@
 This package represents a script to install the latest NginX, MySQL and PHP (with APC and Suhosin):
 
-  * NginX 1.1.14
+  * NginX 1.1.14 (development) or 1.0.12 (stable)
   * PHP 5.3.10
   * APC 3.1.9
   * Suhosin Extension 0.9.33
@@ -58,6 +58,16 @@ In the "ext" folder you will also find some utilities:
 <div style="text-align: center;"><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">VladGh.com-LEMP Script</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://vladgh.com" property="cc:attributionName" rel="cc:attributionURL">Vlad Ghinea</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</div>
 
 ## Release Notes: ##
+
+### 4.01 ###
+
+  * Added the option to choose wich nginx release you wish to install.
+  * Added a script to update php.
+  * Added a script to update apc.
+  * Major code improvements.
+  * Improved the update nginx script.
+  * Fixed timezone issues with newest php version.
+  * Other minor fixes.
 
 ### 3.19 ###
 
